tests/fixtures/compile_errors/abi_encode_from_storage.fe
contract Foo:
    my_field: (u256, bool)

    pub def bar():
        self.my_field.abi_encode()